# fmconv

./: .gitignore  .gitmodules  CMakeLists.txt  FM9_IMPLEMENTATION_PLAN.md  LICENSE  README.md  S3M_IMPLEMENTATION_PLAN.md  TECHNICAL.md
.github/workflows/: build.yml
cmake/: lame.cmake  lame_config.h.in  libopenmpt.cmake
docs/: FM9_EXTRACT.md  FM9_FORMAT.md  MIDI_BANKS.md  MP3_AUDIO_IMPLEMENTATION.md  SUPPORTED_FORMATS.md
src/: miniz_export.h  unified_converter.cpp
src/adplug_vgm/: vgm_opl.cpp  vgm_opl.h
src/audio/: mp3_encoder.cpp  mp3_encoder.h
src/detection/: bank_detector.cpp  bank_detector.h
src/fm9_writer/: fm9_writer.cpp  fm9_writer.h  source_format.h
src/formats/: hmp_file.cpp  hmp_file.h  hmp_to_midi.cpp  hmp_to_midi.h
src/openmpt/: openmpt_export.cpp  openmpt_export.h
src/vgm_writer/: gd3_tag.cpp  gd3_tag.h  vgm_chip.cpp  vgm_chip.h
tools/: fm9_extract.py
